src/test/ui/block-result/issue-5500.stderr
error[E0308]: mismatched types
  --> $DIR/issue-5500.rs:12:5
   |
11 | fn main() {
   |           - expected () because of default return type
12 |     &panic!()
   |     ^^^^^^^^^ expected (), found reference
   |
   = note: expected type `()`
              found type `&_`

error: aborting due to previous error

